[project]
name = "recsys2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.5.0",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "arrow==1.3.0",
    "attrs==25.1.0",
    "boto3==1.37.8",
    "botocore==1.37.8",
    "bravado-core==6.1.1",
    "bravado==11.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "filelock==3.17.0",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec[http]==2025.2.0",
    "future==1.0.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "ipykernel>=6.29.5",
    "isoduration==20.11.0",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema-specifications==2024.10.1",
    "jsonschema[format-nongpl]==4.23.0",
    "lightning-utilities==0.13.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.1",
    "mdurl==0.1.2",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "neptune==1.13.0",
    "networkx==3.4.2",
    "numpy==2.1.0",
    "oauthlib==3.2.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "polars>=1.25.2",
    "propcache==0.3.0",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.2.4",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests-oauthlib==2.0.0",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "s3transfer==0.11.4",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "swagger-spec-validator==3.0.4",
    "sympy==1.13.1",
    "torch==2.5.0",
    "torchmetrics==1.3.2",
    "tqdm==4.65.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "webcolors==24.11.1",
    "websocket-client==1.8.0",
    "yarl==1.18.3",
]
